# neo-cpp-sdk

./: .gitignore  CERTIFICATION_COMPLETE.md  CHANGELOG.md  CMakeLists.txt  PRODUCTION_CERTIFICATION_FINAL.md  PRODUCTION_READINESS_FINAL.md  REFACTORING_40_ROUNDS_COMPLETE.md  REFACTORING_COMPLETE_90_ROUNDS.md  SWIFT_TO_CPP_CONVERSION_FINAL_REPORT.md  compare_files.py  comprehensive_test.cpp  comprehensive_validation.cpp  find_missing.py  production_test  simple_validation  simple_validation.cpp  validate_conversion.sh  validate_neocpp.cpp
cmake/: NeoCppConfig.cmake.in
docs/plans/: 2026-01-31-neo-cpp-sdk-fix-identified-issues.md  2026-01-31-neo-cpp-sdk-fixes-design.md  2026-01-31-neo-cpp-sdk-fixes.md
examples/: crypto_example.cpp
include/neocpp/: exceptions.hpp  logger.hpp  neo_constants.hpp  neo_swift_error.hpp  neocpp.hpp
include/neocpp/contract/: contract.hpp  contract_management.hpp  contract_manifest.hpp  fungible_token.hpp  gas_token.hpp  iterator.hpp  nef_file.hpp  neo_name_service.hpp  neo_token.hpp  neo_uri.hpp  nns_name.hpp  non_fungible_token.hpp  policy_contract.hpp  role_management.hpp  smart_contract.hpp  token.hpp
include/neocpp/crypto/: bip32_ec_key_pair.hpp  bip39.hpp  ec_key_pair.hpp  ec_point.hpp  ecdsa_signature.hpp  hash.hpp  nep2.hpp  scrypt_params.hpp  sign.hpp  wif.hpp
include/neocpp/protocol/: http_service.hpp  neo_cpp.hpp  neo_rpc_client.hpp  response_types_impl.hpp  stack_item.hpp
include/neocpp/protocol/core/: neo.hpp  request.hpp  response.hpp
include/neocpp/protocol/core/polling/: block_polling.hpp
include/neocpp/protocol/core/response/: contract_manifest.hpp  contract_method_token.hpp  contract_nef.hpp  contract_state.hpp  contract_storage_entry.hpp  diagnostics.hpp  express_contract_state.hpp  express_shutdown.hpp  invocation_result.hpp  name_state.hpp  native_contract_state.hpp  neo_account_state.hpp  neo_address.hpp  neo_application_log.hpp  neo_block.hpp  neo_find_states.hpp  neo_get_claimable.hpp  neo_get_mem_pool.hpp  neo_get_nep11_balances.hpp  neo_get_nep11_transfers.hpp  neo_get_nep17_balances.hpp  neo_get_nep17_transfers.hpp  neo_get_next_block_validators.hpp  neo_get_peers.hpp  neo_get_state_height.hpp  neo_get_state_root.hpp  neo_get_token_balances.hpp  neo_get_token_transfers.hpp  neo_get_unclaimed_gas.hpp  neo_get_unspents.hpp  neo_get_version.hpp  neo_get_wallet_balance.hpp  neo_list_plugins.hpp  neo_network_fee.hpp  neo_send_raw_transaction.hpp  neo_validate_address.hpp  neo_witness.hpp  nep17_contract.hpp  notification.hpp  oracle_request.hpp  (+7 more)
include/neocpp/protocol/core/witnessrule/: witness_action.hpp  witness_condition.hpp  (+1 more)
include/neocpp/script/: interop_service.hpp  invocation_script.hpp  op_code.hpp  script_builder.hpp  verification_script.hpp
include/neocpp/serialization/: binary_reader.hpp  binary_writer.hpp  neo_serializable.hpp
include/neocpp/transaction/: account_signer.hpp  contract_parameters_context.hpp  contract_signer.hpp  neo_transaction.hpp  signer.hpp  transaction.hpp  transaction_attribute.hpp  transaction_builder.hpp  transaction_error.hpp  witness.hpp  witness_rule.hpp  witness_scope.hpp
include/neocpp/types/: call_flags.hpp  contract_parameter.hpp  contract_parameter_type.hpp  gas_token.hpp  hash160.hpp  hash256.hpp  neo_token.hpp  neo_vm_state_type.hpp  node_plugin_type.hpp  types.hpp
include/neocpp/utils/: address.hpp  base58.hpp  base64.hpp  hex.hpp
include/neocpp/wallet/: account.hpp  bip39_account.hpp  nep2_error.hpp  nep6_account.hpp  nep6_wallet.hpp  wallet.hpp
src/: logger.cpp  neo_constants.cpp
src/contract/: fungible_token.cpp  iterator.cpp  nef_file.cpp  neo_uri.cpp  nns_name.cpp  non_fungible_token.cpp  smart_contract.cpp
src/crypto/: bip32_ec_key_pair.cpp  bip39.cpp  ec_key_pair.cpp  ec_point.cpp  ecdsa_signature.cpp  hash.cpp  nep2.cpp  scrypt_params.cpp  sign.cpp  wif.cpp
src/protocol/: http_service.cpp  neo_cpp.cpp  neo_rpc_client.cpp  response_types.cpp  stack_item.cpp
src/protocol/core/: neo.cpp  request.cpp  response.cpp
src/protocol/core/polling/: block_polling.cpp
src/protocol/core/response/: contract_manifest.cpp  contract_method_token.cpp  contract_nef.cpp  contract_state.cpp  contract_storage_entry.cpp  diagnostics.cpp  invocation_result.cpp  name_state.cpp  native_contract_state.cpp  neo_account_state.cpp  neo_address.cpp  neo_application_log.cpp  neo_block.cpp  neo_find_states.cpp  neo_get_mem_pool.cpp  neo_get_nep11_balances.cpp  neo_get_nep11_transfers.cpp  neo_get_nep17_balances.cpp  neo_get_nep17_transfers.cpp  neo_get_next_block_validators.cpp  neo_get_peers.cpp  neo_get_state_height.cpp  neo_get_unclaimed_gas.cpp  neo_get_unspents.cpp  neo_get_version.cpp  neo_list_plugins.cpp  neo_network_fee.cpp  neo_send_raw_transaction.cpp  neo_validate_address.cpp  neo_witness.cpp  nep17_contract.cpp  notification.cpp  oracle_request.cpp  oracle_response_code.cpp  populated_blocks.cpp  record_state.cpp  transaction_attribute.cpp  transaction_send_token.cpp  transaction_signer.cpp
src/script/: interop_service.cpp  op_code.cpp  script_builder.cpp
src/serialization/: binary_reader.cpp  binary_writer.cpp  neo_serializable.cpp
src/transaction/: account_signer.cpp  contract_parameters_context.cpp  contract_signer.cpp  neo_transaction.cpp  signer.cpp  transaction.cpp  transaction_attribute.cpp  transaction_builder.cpp  transaction_error.cpp  witness.cpp  witness_rule.cpp  witness_scope.cpp
src/types/: contract_parameter.cpp  gas_token.cpp  hash160.cpp  hash256.cpp  neo_token.cpp  types.cpp
src/utils/: address.cpp  base58.cpp  base64.cpp  hex.cpp
src/wallet/: account.cpp  bip39_account.cpp  nep2_error.cpp  nep6_wallet.cpp  wallet.cpp
tests/: CMakeLists.txt
tests/crypto/: test_ec_key_pair.cpp  test_sign.cpp  test_wif.cpp
tests/script/: test_op_code.cpp  test_script_builder_complete.cpp
tests/transaction/: test_signer.cpp  test_transaction.cpp  test_transaction_builder_complete.cpp  test_witness_scope.cpp
tests/unit/serialization/: binary_writer_test.cpp
tests/utils/: test_address.cpp
tests/wallet/: test_nep6_wallet.cpp  test_wallet.cpp
